<resources>
    <string name="app_name">Alcool ou Gasolina</string>
    <string name="logo_description">Alcool ou Gasolina</string>
    <string name="frase_descricao">Saiba a melhor opção de abastecimento do seu carro!</string>
    <string name="label_alcool">Preço álcool ex: 1.90</string>
    <string name="label_gasolina">Preço gasolina ex: 2.60</string>
    <string name="botao">Calcular</string>
</resources>